# HightLoadServer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  httpd.conf  index.html  main.cpp  pizda.html  result_my  result_nginx  start_diff_test  start_func_test  start_load_test  threads_active
include/: Client.h  Config.h  ConfigParser.h  Header.h  Request.h  RequestProcessor.h  Response.h  ResponseProcessor.h  Server.h  ThreadRoutine.h  Types.h
src/: Client.cpp  Config.cpp  ConfigParser.cpp  Request.cpp  RequestProcessor.cpp  Response.cpp  ResponseProcessor.cpp  Server.cpp  ThreadRoutine.cpp
